chiefs & 49ers df

--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -5036,69 +5036,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### how many offensive terms exist in each team's data set?\n",
-    "\n",
-    "we can check to see how many of the 27 offensive terms appear in conjunction with each team's name:"
+    "#### Combining Corpora into One Dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "offensive terms/phrases mentioned with the San Francisco 49ers:  44504\n",
-      "offensive terms/phrases mentioned with the Washington R*dskins:  45878\n",
-      "offensive terms/phrases mentioned with the Kansas City Chiefs:  82386\n",
-      "total offensive terms/phrases in 49ers, R*dskins, & Chiefs tweets:  172768\n"
-     ]
-    }
-   ],
-   "source": [
-    "terms_in_49ers = len(sf_49ers_terms_full_df)\n",
-    "\n",
-    "terms_in_rs = len(wa_rs_terms_full_df)\n",
-    "\n",
-    "terms_in_chiefs = len(kc_chiefs_terms_full_df)\n",
-    "\n",
-    "total_offensive_terms = terms_in_49ers + terms_in_rs + terms_in_chiefs\n",
-    "\n",
-    "print('offensive terms/phrases mentioned with the San Francisco 49ers: ', terms_in_49ers)\n",
-    "\n",
-    "print('offensive terms/phrases mentioned with the Washington R*dskins: ', terms_in_rs)\n",
-    "\n",
-    "print('offensive terms/phrases mentioned with the Kansas City Chiefs: ', terms_in_chiefs)\n",
-    "\n",
-    "print('total offensive terms/phrases in 49ers, R*dskins, & Chiefs tweets: ', total_offensive_terms)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### the verdict: over 170,000 offensive words & phrases\n",
-    "\n",
-    "I was able to find a total of 172,768 offensive terms & phrases used in conjunction with racist team names like the R-dskins & the the Chiefs.\n",
-    "\n",
-    "The NFL, team owners, & fans claiming that Washington's use of a slur as its team name is not offensive will need to explain away over 45,000 tweets containing violent and/or offensive imagery. This dataset is a resounding counter to the claim that the slur \"r-dskins\" is no longer used offensively. \n",
-    "\n",
-    "The two teams in the 2020 Super Bowl provide the most telling comparison, since these teams could be expected to share a relatively similar amount of \"trash talk\" in the days leading up to the game. \n",
-    "\n",
-    "However that is not what the data show, and the difference could not be more stark: while the San Francisco 49ers team name is itself problematic with deep anti-Indigenous connotations, as demonstrated by over 44,000 rows of tweets containing offensive words & imagery, **the Kansas City Chiefs dataset is nearly twice as long, at *82,386* tweets.**\n",
-    "\n",
-    "## visualizing anti-Indigenous speech around Native mascots\n",
-    "\n",
-    "With the data gathered, it's possible to visualize just how closely teams with Native-themed names are linked to racist speech.\n",
-    "\n",
-    "#### Combining Dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5129,7 +5072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -5222,7 +5165,7 @@
        "4  @ParkerHamlett @Redskins Saints and ravens her...  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5235,7 +5178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5248,11 +5191,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing the Data: Overall Trends\n",
+    "### how many offensive terms exist in each team's data set?\n",
     "\n",
-    "#### General Distributions & Trends for All Three Teams\n",
+    "we can check to see how many of the 27 offensive terms appear in conjunction with each team's name:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "offensive terms/phrases mentioned with the San Francisco 49ers:  44504\n",
+      "offensive terms/phrases mentioned with the Washington R*dskins:  45878\n",
+      "offensive terms/phrases mentioned with the Kansas City Chiefs:  82386\n",
+      "total offensive terms/phrases in 49ers, R*dskins, & Chiefs tweets:  172768\n"
+     ]
+    }
+   ],
+   "source": [
+    "terms_in_49ers = len(sf_49ers_terms_full_df)\n",
     "\n",
-    "The bar chart below shows frequencies for each term, drawn from the entire dataset. Even with the inclusion of the ostensibly racially-neutral 49ers, it's easy to see racially-linked speech heavily represented in the corpus."
+    "terms_in_rs = len(wa_rs_terms_full_df)\n",
+    "\n",
+    "terms_in_chiefs = len(kc_chiefs_terms_full_df)\n",
+    "\n",
+    "total_offensive_terms = terms_in_49ers + terms_in_rs + terms_in_chiefs\n",
+    "\n",
+    "print('offensive terms/phrases mentioned with the San Francisco 49ers: ', terms_in_49ers)\n",
+    "\n",
+    "print('offensive terms/phrases mentioned with the Washington R*dskins: ', terms_in_rs)\n",
+    "\n",
+    "print('offensive terms/phrases mentioned with the Kansas City Chiefs: ', terms_in_chiefs)\n",
+    "\n",
+    "print('total offensive terms/phrases in 49ers, R*dskins, & Chiefs tweets: ', total_offensive_terms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### the verdict: over 170,000 offensive words & phrases\n",
+    "\n",
+    "I was able to find a total of 172,768 offensive terms & phrases used in conjunction with racist team names like the R-dskins & the the Chiefs.\n",
+    "\n",
+    "The NFL, team owners, & fans claiming that Washington's use of a slur as its team name is not offensive will need to explain away over 45,000 tweets containing violent and/or offensive imagery. This dataset is a resounding counter to the claim that the slur \"r-dskins\" is no longer used offensively. \n",
+    "\n",
+    "The two teams in the 2020 Super Bowl provide the most telling comparison, since these teams could be expected to share a relatively similar amount of \"trash talk\" in the days leading up to the game. \n",
+    "\n",
+    "However that is not what the data show, and the difference could not be more stark: while the San Francisco 49ers team name is itself problematic with deep anti-Indigenous connotations, as demonstrated by over 44,000 rows of tweets containing offensive words & imagery, **the Kansas City Chiefs dataset is nearly twice as long, at *82,386* tweets.**\n",
+    "\n",
+    "## visualizing anti-Indigenous speech around Native mascots\n",
+    "\n",
+    "With the data gathered, it's possible to visualize just how closely teams with Native-themed names are linked to racist speech.\n",
+    "\n",
+    "### Vizualizing Overall Trends\n",
+    "\n",
+    "The bar chart below shows frequencies for each term, drawn from the entire dataset. Even with the inclusion of the ostensibly racially-neutral 49ers, it's easy to see racially-linked speech heavily represented in the corpus.\n"
    ]
   },
   {
@@ -5292,12 +5290,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing the Data: Native Mascots vs the 49ers"
+    "### Visualizing the Data: Native Mascots vs the 49ers\n",
+    "\n",
+    "It's useful to take a look at term frequencies for the teams with Native mascots, versus the 49ers.\n",
+    "\n",
+    "To do this, I created a seperate corpus consisting solely of tweets referencing the R-dskins & the Chiefs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5398,11 +5400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Term Frequencies for the San Francisco 49ers\n",
-    "\n",
-    "It's useful to take a look at term frequencies for the teams with Native mascots, versus the 49ers.\n",
-    "\n",
-    "To do this, I created a seperate corpus consisting solely of tweets referencing the R-dskins & the Chiefs."
+    "#### Term Frequencies for the San Francisco 49ers"
    ]
   },
   {
@@ -5445,7 +5443,9 @@
     "\n",
     "With the R-dskins & Chiefs corpora combined, an increase in negative terms strongly associated with Natives is clearly visible. \n",
     "\n",
-    "While insults like \"stupid\" and violent/genocide-referencing words such as \"killed\" are frequently associated with anti-Native hate speech, they could also be explained by so-called sports \"trash talk\". However, increases in terms such as \"scalp\", \"reservation\", \"firewater\", and \"smallpox\" are unlikely to be associated with sports vernacular."
+    "While insults like \"stupid\" and violent/genocide-referencing words such as \"killed\" are frequently associated with anti-Native hate speech, some of these occurences could also be explained by so-called sports \"trash talk\". \n",
+    "\n",
+    "However, increases in terms such as \"scalp\", \"reservation\", \"firewater\", and \"smallpox\" are unlikely to be associated with sports vernacular."
    ]
   },
   {
@@ -5478,6 +5478,37 @@
     "# term frequencies for R*dskins & Chiefs\n",
     "\n",
     "Native_mascots_df['term'].value_counts().sort_index().plot.bar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a df containing only the chiefs & 49ers corpora\n",
+    "\n",
+    "chiefs_and_49ers = Not_Your_Mascot_full_df[Not_Your_Mascot_full_df['team'].isin(['49ers', 'chiefs']) ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126890"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(chiefs_and_49ers)"
    ]
   },
   {
