--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -6005,7 +6005,9 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
