--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -5930,7 +5930,11 @@
     "\n",
     "Some of the imagery evoked by these terms is particularly violent. Moreover, it is difficult to explain away occurrences within the Chiefs dataset of words like \"exterminate\" as simple \"trash talk\"--particularly given the term's absence from 49ers discourse. \n",
     "\n",
-    "Given the demonstrable racial overtones of this data and [epidemic of violence against Native womxn](https://www.theguardian.com/commentisfree/2019/may/02/missing-murdered-indigenous-women-deb-haaland), it is difficult not to find these corpora concerning:"
+    "According to the [US Department of Justice](https://www.bjs.gov/content/pub/pdf/aic.pdf):\n",
+    "\n",
+    "**_“American Indians are more likely than people of other races to experience violence at the hands of someone of a different race.”_**\n",
+    "\n",
+    "Given the demonstrable racial overtones of this data and [epidemic of violence against Native womxn](https://www.theguardian.com/commentisfree/2019/may/02/missing-murdered-indigenous-women-deb-haaland), **it is difficult not to find these corpora concerning:**"
    ]
   },
   {
