--- a/datasets/Not_Your_Mascot_datasets.ipynb
+++ b/datasets/Not_Your_Mascot_datasets.ipynb
@@ -2028,7 +2028,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rs_working_df.to_csv('rs_queries_master_df_Jan_26_2020.csv')"
+    "rs_working_df.to_csv('rdskins_raw_queries.csv')"
    ]
   },
   {
@@ -2975,7 +2975,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiefs_queries_master_df.to_csv('chiefs_queries_master_df_Jan_28_2020.csv')"
+    "chiefs_queries_master_df.to_csv('chiefs_raw_queries.csv')"
    ]
   },
   {
@@ -2998,7 +2998,7 @@
    "source": [
     "# test\n",
     "\n",
-    "c_test_df1 = chiefs_queries_master_df[chiefs_queries_master_df['text'].str.contains('dead')]\n",
+    "c_test_df1 = chiefs_queries_mast170er_df[chiefs_queries_master_df['text'].str.contains('dead')]\n",
     "\n",
     "c_test_df2 = chiefs_queries_master_df[chiefs_queries_master_df['text'].str.contains('Dead')]\n",
     "\n",
@@ -3913,7 +3913,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sf_49ers_queries_master_df.to_csv('sf_49ers_queries_master_df_Jan_28_2020.csv')"
+    "sf_49ers_queries_master_df.to_csv('sf_49ers_raw_queries.csv')"
    ]
   },
   {
