--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -2029,7 +2029,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rs_working_df.to_csv('rs_queries_master_df_Jan_26_2020.csv')"
+    "rs_working_df.to_csv('rdskins_raw_queries.csv')"
    ]
   },
   {
@@ -2976,7 +2976,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiefs_queries_master_df.to_csv('chiefs_queries_master_df_Jan_28_2020.csv')"
+    "chiefs_queries_master_df.to_csv('chiefs_raw_queries.csv')"
    ]
   },
   {
@@ -3914,7 +3914,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sf_49ers_queries_master_df.to_csv('sf_49ers_queries_master_df_Jan_28_2020.csv')"
+    "sf_49ers_queries_master_df.to_csv('sf_49ers_raw_queries.csv')"
    ]
   },
   {
