md edits (links)

--- a/dataviz/Not_Your_Mascot_dataviz.ipynb
+++ b/dataviz/Not_Your_Mascot_dataviz.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing the Data\n",
+    "# Visualizing the Data\n",
+    "\n",
+    "*this notebook contains code for data visualizations only. find a full notebook including code for dataset creation [here](https://github.com/IndigenousEngineering/Not_Your_Mascot/blob/master/Not_Your_Mascot_full.ipynb).*\n",
+    "\n",
+    "*datasets for this project are available in [this repo](https://github.com/IndigenousEngineering/Not_Your_Mascot/tree/master/datasets).*\n",
     "\n",
     "### over 170,000 offensive words & phrases\n",
     "\n",
