md edits - links

--- a/datasets/Not_Your_Mascot_datasets.ipynb
+++ b/datasets/Not_Your_Mascot_datasets.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# not your mascot: datasets\n",
+    "\n",
+    "*this notebook contains code used to create the datasets for this project. find a complete notebook including data visualization [here](https://github.com/IndigenousEngineering/Not_Your_Mascot/blob/master/Not_Your_Mascot_full.ipynb).*\n",
+    "\n",
+    "*datasets for this project are available in [this repo](https://github.com/IndigenousEngineering/Not_Your_Mascot/tree/master/datasets).*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
