re-added tweets_to_df

--- a/datasets/Not_Your_Mascot_datasets.ipynb
+++ b/datasets/Not_Your_Mascot_datasets.ipynb
@@ -154,6 +154,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tweet_obj_to_df(tweet_objects):\n",
+    "    \n",
+    "    tweet_dict = {'text': [],\n",
+    "                  'author': []\n",
+    "                 }\n",
+    "    \n",
+    "    for tweet in tweet_objects:\n",
+    "        \n",
+    "        tweet_dict['text'].append(tweet.all_text)\n",
+    "        \n",
+    "        tweet_dict['author'].append(tweet.screen_name)\n",
+    "    \n",
+    "    tweets_df = pd.DataFrame(tweet_dict)\n",
+    "    \n",
+    "    return tweets_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
