tweets_to_df docstring

--- a/datasets/Not_Your_Mascot_datasets.ipynb
+++ b/datasets/Not_Your_Mascot_datasets.ipynb
@@ -160,6 +160,17 @@
    "source": [
     "def tweet_obj_to_df(tweet_objects):\n",
     "    \n",
+    "    '''\n",
+    "    takes a tweet object\n",
+    "    \n",
+    "    * appends text, author & other info the a dictionary\n",
+    "    \n",
+    "    * converts dictionary to dataframe\n",
+    "    \n",
+    "    returns dataframe with tweet info\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
     "    tweet_dict = {'text': [],\n",
     "                  'author': []\n",
     "                 }\n",
